--- a/modules/scheduler/views/ats2015/scripts/tournament/index.phtml
+++ b/modules/scheduler/views/ats2015/scripts/tournament/index.phtml
@@ -6,6 +6,7 @@
     <tr>
       <th style="width: 500px">Naam</th>
       <th style="width: 300px">Start</th>
+      <th style="width: 90px"></th>
       <th></th>
     </tr>
     <?php foreach ($this->tournaments as $tournament): ?>
@@ -13,12 +14,19 @@
       <td><a href="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'read', 'id' => $tournament->id)) ?>"><?php echo $this->escape($tournament->name) ?></a></td>
       <td><?php echo $this->locale()->getFormatter()->formatDateTime($tournament->starts_at, 'shortest') ?></td>
       <td>
-        <a href="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'move', 'id' => $tournament->id, 'count' => -1)) ?>"><img src="ats2015/general/images/icons/16x16/arrow_up_blue.png" /></a> 
-        <a href="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'move', 'id' => $tournament->id, 'count' => 1)) ?>"><img src="ats2015/general/images/icons/16x16/arrow_down_green.png" /></a>
+        <a href="<?php echo $this->url(array('action' => 'move', 'id' => $tournament->id, 'count' => -1)) ?>"><img src="ats2015/general/images/icons/16x16/arrow_up_blue.png" /></a> 
+        <a href="<?php echo $this->url(array('action' => 'move', 'id' => $tournament->id, 'count' => 1)) ?>"><img src="ats2015/general/images/icons/16x16/arrow_down_green.png" /></a>
+      </td>
+      <td>
+        <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $tournament->id)) ?>" title="Verwijder tournooi" onclick="return confirm('Weet u zeker dat u dit toernooi met alle poules, standen en wedstrijden wilt verwijderen?')"><img src="ats2015/general/images/icons/16x16/delete2.png" /></a>
       </td>
     </tr>
     <?php endforeach ?>
   </table>
+  <br />
+  <form class="admin-button" method="get" action="<?php echo $this->url(array('action' => 'create')) ?>">
+    <button type="submit">Toevoegen <img src="ats2015/general/images/icons/16x16/add.png" style="vertical-align: middle" /></button>
+  </form>
 </div>
 
 <h3>Wedstrijden</h3>
