possibility to create a team and to view, create and update fields

--- a/modules/general/views/ats2015/scripts/master.phtml
+++ b/modules/general/views/ats2015/scripts/master.phtml
@@ -25,6 +25,8 @@
           #<input type="text" style="width: 60px" name="id" value="" />
         </form>
       </div>
+      | <a href="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'team', 'action' => 'index')) ?>">Teams</a>
+      | <a href="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'field', 'action' => 'index')) ?>">Velden</a>
     <?php endif ?>
       
       
