--- a/modules/scheduler/views/ats2015/scripts/team/update.phtml
+++ b/modules/scheduler/views/ats2015/scripts/team/update.phtml
@@ -1,4 +1,4 @@
-<?php $this->subtitle('Teams') ?>
+<?php $this->subtitle('Teams', $this->url(array('action' => 'index'))) ?>
 <?php $this->subtitle($this->team->name, $this->url(array('action' => 'read', 'id' => $this->team->id))) ?>
 <?php $this->subtitle('wijzig') ?>
 
