--- a/modules/scheduler/views/ats2015/scripts/match/_table.phtml
+++ b/modules/scheduler/views/ats2015/scripts/match/_table.phtml
@@ -40,7 +40,7 @@ if (!isset($this->highlightTeamId)) { $this->highlightTeamId = -1; }
       <?php echo $this->locale()->getFormatter()->formatTime($match->starts_at, 'short', "Y-m-d H:i:s") ?>
       <?php endif ?>
     </td>
-    <td><?php echo $this->escape($match->field->name) ?></td>
+    <td><a href="<?php echo $this->url(array('controller' => 'field', 'action' => 'read', 'id' => $match->field->id)) ?>"><?php echo $this->escape($match->field->name) ?></a></td>
     <?php if (!$this->hideTournaments): ?>
     <td><a href="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'read', 'id' => $match->group->tournament->id)) ?>"><?php echo $this->escape($match->group->tournament->name) ?></a></td>
     <?php endif ?>
