--- a/modules/scheduler/views/ats2015/scripts/group/create.phtml
+++ b/modules/scheduler/views/ats2015/scripts/group/create.phtml
@@ -1,7 +1,6 @@
 <?php $this->subtitle('Toernooien', $this->url(array('module' => 'scheduler', 'controller' => 'tournament', 'action' => 'index'))) ?>
 <?php $this->subtitle($this->tournament->name, $this->url(array('controller' => 'tournament', 'action' => 'read', 'id' => $this->tournament->id))) ?>
-<?php $this->subtitle('Poules') ?>
-<?php $this->subtitle('toevoegen') ?>
+<?php $this->subtitle('Poule toevoegen') ?>
 
 <div class="section">
   <?php echo $this->partial('group/_modify.phtml', array('action' => 'create')) ?>
