--- a/modules/scheduler/views/ats2015/scripts/tournament/read.phtml
+++ b/modules/scheduler/views/ats2015/scripts/tournament/read.phtml
@@ -33,7 +33,7 @@
   
   <form class="admin-button" method="get" action="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'nextphase')) ?>">
     <input type="hidden" name="id" value="<?php echo $this->tournament->id?>" />
-    <button type="submit">Volgende fase</button>
+    <button type="submit">Volgende fase <img src="ats2015/general/images/icons/16x16/navigate_right.png" style="vertical-align: middle" /></button> 
   </form>
 </div>
 
