standings are now generated when next phase is started

--- a/modules/scheduler/views/ats2015/scripts/tournament/nextphase.phtml
+++ b/modules/scheduler/views/ats2015/scripts/tournament/nextphase.phtml
@@ -23,7 +23,7 @@
           <th class="caption" colspan="2"><?php echo $this->escape($this->groups[$index]->name) ?></th>
         </tr>
         <tr>
-          <th></th>
+          <th style="width: 12px"></th>
           <th>Team</th>
         </tr>
         <?php foreach ($ticketGroup->tickets as $i => $ticket): ?>
