renamed tournament to '2 Bruder'

--- a/modules/general/views/ats2015/scripts/frontpage/index.phtml
+++ b/modules/general/views/ats2015/scripts/frontpage/index.phtml
@@ -1,7 +1,7 @@
-<?php $this->subtitle('Aviko Cup - toernooi beheer') ?>
+<?php $this->subtitle('2 Brüder Cup - toernooi beheer') ?>
 
 <div style="text-align: center; margin: 50px 0 100px 0">
-  <img src="ats2015/general/images/logo_240x149.png" />
+  <img src="ats2015/general/images/logo_150x150.png" />
 </div>
 
 <h2>Welkom</h2>
