--- a/modules/general/views/general/scripts/master.phtml
+++ b/modules/general/views/general/scripts/master.phtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
     <base href="<?php echo $this->baseUrl()?>" />
-    <?php $this->headTitle('Aviko Tournament Scheduler') ?>
+    <?php $this->headTitle('2 Brüder Cup Scheduler') ?>
     <?php echo $this->headMeta() ?>
     <?php echo $this->headTitle()?>
     <?php echo $this->headStyle()?>
@@ -25,12 +25,12 @@
     <?php else: ?>
       | <a href="<?php echo $this->url(array('module' => 'user', 'controller' => 'user', 'action' => 'login')) ?>">Login</a>
     <?php endif ?>
-      
+
     </div>
 
     <?php echo $this->content ?>
-    
+
     <?php $this->headScript()->prependJavascriptFile("http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js") ?>
     <?php echo $this->headScript()?>
   </body>
-</html>  
+</html>
